# LaNN

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  lann.modules.rst  lann.rst  modules.rst
examples/: binary_classification.py  dense.py  distributed_binary_classification.py  lstm.py  mnist.py  rl_breakout.py  test.py  test_dot_dict.py  test_load_mnist.py
lann/: activation.py  datasets.py  functions.py  initializers.py  metrics.py  models.py  module.py  modules.py  optimizer.py  pytree.py  reinforcement_learning.py  trainer.py  typing.py  utils.py
lann/activation/: __init__.py  activation.py
lann/modules/: __init__.py  layers.py  lstm.py  module.py
